--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - master
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: juhovan/piped-frontend
+
 jobs:
   build-docker-hotspot:
     runs-on: ubuntu-latest
